--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,9 @@
       overflow-x: overlay !important;
       overflow-y: hidden !important;
     }
+    .rs-panel-body, .rs-panel-header{
+      padding: 11.5px !important;
+    }
   </style>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" />
   <title>React App</title>
