--- a/public/index.html
+++ b/public/index.html
@@ -17,14 +17,15 @@
       font-style: normal;
     }
 
-    #Total{
+    #Total {
       font-family: DSDIGI;
       font-size: 55px;
       color: #009708;
       display: inline-block;
       text-align: right;
     }
-    #NISSymbol{
+
+    #NISSymbol {
       font-family: DSDIGI;
       font-size: 30px;
       color: #009708;
@@ -58,6 +59,19 @@
     .rs-panel-body,
     .rs-panel-header {
       padding: 11.5px !important;
+    }
+
+    .react-confirm-alert-button-group {
+      justify-content: space-between !important;
+    }
+
+    .react-confirm-alert-button-group>button {
+      height: 80px;
+      font-size: 26px !important;
+    }
+
+    .react-confirm-alert-button-group button:nth-of-type(1) {
+      background: rgb(0, 122, 43);
     }
   </style>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" />
