--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
     }
   </style>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" />
-  <title>React App</title>
+  <title>Dazzle - Shini POS Terminal</title>
 </head>
 
 <body>
