--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,7 @@
       background-color: #4b4b4b !important;
       overflow-y: hidden !important;
       overflow-x: hidden !important;
+      width: 98.5% !important;
     }
 
     .rs-stack-item {
