--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<html lang="en" style="background: white!important">
+<html lang="en" >
 
 <head>
   <meta charset="utf-8" />
@@ -14,6 +14,12 @@
     @font-face {
       font-family: "DSDIGI";
       src: url('DS-DIGI.TTF');
+      font-style: normal;
+    }
+
+    @font-face {
+      font-family: "Janna";
+      src: url('Janna.ttf');
       font-style: normal;
     }
 
@@ -36,7 +42,7 @@
 
     body {
       margin: 0;
-      background-color: #4b4b4b !important;
+      background-color: rgb(48, 48 ,48) !important;
       overflow-y: hidden !important;
       overflow-x: hidden !important;
       width: 98.5% !important;
