--- a/public/index.html
+++ b/public/index.html
@@ -68,6 +68,10 @@
       padding: 11.5px !important;
     }
 
+    .react-confirm-alert-overlay{
+      background: rgb(0 0 0 / 90%) !important;
+    }
+
     .react-confirm-alert-button-group {
       justify-content: space-between !important;
     }
