--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<html lang="en" >
+<html lang="en">
 
 <head>
   <meta charset="utf-8" />
@@ -42,7 +42,7 @@
 
     body {
       margin: 0;
-      background-color: rgb(48, 48 ,48) !important;
+      background-color: rgb(48, 48, 48) !important;
       overflow-y: hidden !important;
       overflow-x: hidden !important;
       width: 98.5% !important;
@@ -68,7 +68,7 @@
       padding: 11.5px !important;
     }
 
-    .react-confirm-alert-overlay{
+    .react-confirm-alert-overlay {
       background: rgb(0 0 0 / 90%) !important;
     }
 
@@ -83,6 +83,18 @@
 
     .react-confirm-alert-button-group button:nth-of-type(1) {
       background: rgb(0, 122, 43);
+    }
+
+    .hide-scrollbar {
+      -ms-overflow-style: none;
+      /* Internet Explorer 10+ */
+      scrollbar-width: none;
+      /* Firefox */
+    }
+
+    .hide-scrollbar::-webkit-scrollbar {
+      display: none;
+      /* Safari and Chrome */
     }
   </style>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" />
