--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,24 @@
       color: #009708;
       display: inline-block;
       text-align: right;
+      margin-right: 5px;
+    }
 
+    #TotalTax {
+      font-family: DSDIGI;
+      font-size: 25px;
+      color: #009708;
+      display: inline-block;
+      text-align: right;
+    }
+
+    #NISSymbolTax {
+      font-family: DSDIGI;
+      font-size: 20px;
+      color: #009708;
+      display: inline-block;
+      text-align: right;
+      margin-right: 5px;
     }
 
     body {
