--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
 
     body {
       margin: 0;
-      background-color: white !important;
+      background-color: rgb(48, 48 ,48) !important;
       overflow-y: hidden !important;
       overflow-x: hidden !important;
       width: 98.5% !important;
